@@ -1,13 +1,14 @@
 package com.airtek.orders;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 import java.util.HashMap;
+import java.util.Optional;
 import java.util.Iterator;
-import java.util.stream.Stream;
 
 public class OrderScheduler implements IOrderScheduler {
 
@@ -16,7 +17,9 @@ public class OrderScheduler implements IOrderScheduler {
 		List<String> sortedKeys = ordersMap.keySet().stream().sorted().limit(20).toList();
 		List<Order> orders = new ArrayList<Order>();
 		for(String orderKey:sortedKeys) {
-			orders.add(ordersMap.get(orderKey));
+			Order ord = ordersMap.get(orderKey);
+			ord.setOrderId(orderKey);
+			orders.add(ord);
 		}
 		
 		flight.setScheduledOrders(orders);
@@ -24,37 +27,43 @@ public class OrderScheduler implements IOrderScheduler {
 	}
 
 	@Override
-	public List<Flight> ScheduleOrdersForManyFlights(List<Flight> flights, Map<String, Order> orders) {
-		
-		// TODO Auto-generated method stub		
+	public List<Flight> ScheduleOrdersForManyFlights(List<Flight> flights, IOrderRepository orderRepository, int batchSize) {
+				
 		Collections.sort(flights, (f1, f2) -> f1.getDay() < f2.getDay() ? -1 : 1);
     	
-		Iterator<Map<String, Order>> batchIterator = partitionMap(orders, 20).iterator(); 
-		
-		while(batchIterator.hasNext()) {
-			Map<String, Order> batch = batchIterator.next();
-			flights.forEach((Flight flight)-> ScheduleFlightOrders(flight, batch));
+		Iterator<Flight> flightIterator = flights.iterator();
+		int i = 0;
+
+		while(i < flights.size() * batchSize) {
+			Flight flight = flightIterator.next();
+			Optional<Map<String, Order>> maybeOrders = orderRepository.getOrders(i, batchSize);
+			if(maybeOrders.isPresent()) 
+				flight = ScheduleFlightOrders(flight, maybeOrders.get());
+			else
+				flight.setScheduledOrders(new ArrayList<>());	
+
+			i+=batchSize;
 		}
+
 		return flights;
 	}
 
-	private static List<Map<String, Order>> partitionMap(Map<String, Order> ordersMap, int batchSize) {
+	@Override
+	public List<String> getNonScheduledOrders(List<Flight> flights, IOrderRepository orderRepo) {
 		
-		int i = 0;
-		List<Map<String, Order>> result = new ArrayList<Map<String, Order>>();
-		List<String> sortedKeys = ordersMap.keySet().stream().sorted().toList();
+		final Map<String, Order> allOrders = orderRepo.getOrders(0, -1)
+													.orElseGet(() -> new HashMap<String, Order>());
+
+        Set<String> assignedOrders = flights
+						.stream()
+						.flatMap(f -> 
+							f.getScheduledOrders()
+							.stream())
+						.map(ord -> ord.getOrderId()).collect(Collectors.toSet());
+						
+		return allOrders.keySet().stream()
+				.filter(o->!assignedOrders.contains(o))
+				.collect(Collectors.toList());
+	}
 		
-		while(i < ordersMap.keySet().size()) {	
-			//sort keys
-			List<String> keyBatch = sortedKeys.stream().skip(i).limit(batchSize).toList();
-			
-			//make a batch
-			HashMap<String, Order> batch = new HashMap<String, Order>();
-			keyBatch.forEach(s->batch.put(s, ordersMap.get(s)));
-			
-			result.add(batch);
-			i+=batchSize;
-		} 
-		return result;
-	}	
 }
